--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -3,15 +3,14 @@
       <!-- Handle branch node menu items -->
       <span *ngIf="child.children && child.children.length > 0">
         <button mat-menu-item color="primary" [matMenuTriggerFor]="menu.childMenu">
-          <mat-icon>{{child.iconName}}</mat-icon>
           <span>{{child.displayName}}</span>
+          <mat-icon>expand_more</mat-icon>
         </button>
         <app-menu-item #menu [items]="child.children"></app-menu-item>
       </span>
       <!-- Handle leaf node menu items -->
       <span *ngIf="!child.children || child.children.length === 0">
         <button mat-menu-item [routerLink]="child.route">
-          <mat-icon>{{child.iconName}}</mat-icon>
           <span>{{child.displayName}}</span>
         </button>
       </span>
