--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,40 +1,21 @@
-<!--Carousel Wrapper-->
-<mdb-carousel [isControls]="true" class="carousel slide carousel-fade" [animation]="'fade'">
-  <!--First slide-->
-  <mdb-carousel-item>
-      <div class="view w-100">
-          <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
-          <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
-      </div>
-      <div class="carousel-caption">
-          <h3 class="h3-responsive">Light mask</h3>
-          <p>First text</p>
-      </div>
-  </mdb-carousel-item>
-  <!--/First slide-->
-  <!--Second slide-->
-  <mdb-carousel-item>
-      <div class="view w-100">
-          <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
-          <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
-      </div>
-      <div class="carousel-caption">
-          <h3 class="h3-responsive">Strong mask</h3>
-          <p>Secondary text</p>
-      </div>
-  </mdb-carousel-item>
-  <!--/Second slide-->
-  <!--Third slide-->
-  <mdb-carousel-item>
-      <div class="view w-100">
-          <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-          <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
-      </div>
-      <div class="carousel-caption">
-          <h3 class="h3-responsive">Slight mask</h3>
-          <p>Third text</p>
-      </div>
-  </mdb-carousel-item>
-  <!--/Third slide-->
-</mdb-carousel>
-<!--/.Carousel Wrapper-->
+<div class="basic-container">
+
+  <mat-grid-list cols="6" rowHeight="2:3">
+    <mat-grid-tile
+        *ngFor="let tile of tiles">
+      <mat-card class="home-card">
+        <img mat-card-image src="../../assets/images/keyboard.jpeg" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p>
+      {{tile.text}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>Add to cart</button>
+    <button mat-button>Buy</button>
+  </mat-card-actions>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+  
+  </div>
