--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,22 @@
-<div class="basic-container">
-
-  <mat-grid-list cols="6" rowHeight="2:3">
-    <mat-grid-tile
-        *ngFor="let tile of tiles">
-      <mat-card class="home-card">
-        <img mat-card-image src="../../assets/images/keyboard.jpeg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      {{tile.text}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>Add to cart</button>
-    <button mat-button>Buy</button>
-  </mat-card-actions>
+<mat-grid-list cols="5" rowHeight="1:1.4"    gutterSize="10px"  >
+  <mat-grid-tile
+      *ngFor="let tile of tiles | paginate: { itemsPerPage: 5, currentPage: p }">
+      <mat-card  class="resp">
+        <mat-card-header>
+          <mat-card-title class="font">{{tile.text}}</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <span>{{tile.text}}</span>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button class="font">LIKE</button>
+          <button mat-button class="font">SHARE</button>
+        </mat-card-actions>
       </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-  
-  </div>
+  </mat-grid-tile>
+</mat-grid-list>
+<div >
+
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
